--- a/src/gui/registrarEntrada.form
+++ b/src/gui/registrarEntrada.form
@@ -105,6 +105,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Tela Inicial"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
