--- a/src/gui/registrarSaida.form
+++ b/src/gui/registrarSaida.form
@@ -23,11 +23,11 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="331" max="32767" attributes="0"/>
+          <EmptySpace min="0" pref="338" max="32767" attributes="0"/>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
-                  <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="jPanel1" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -53,16 +53,16 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <EmptySpace min="13" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="2" attributes="0">
                       <Component id="jLabel1" alignment="2" min="-2" max="-2" attributes="0"/>
                       <Component id="jTextFieldMatricula" alignment="2" min="-2" pref="182" max="-2" attributes="0"/>
                       <Component id="jLabel2" alignment="2" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="2" attributes="0">
-                      <Component id="jButtonEntrada" alignment="2" min="-2" max="-2" attributes="0"/>
-                      <Component id="jButton1" alignment="2" min="-2" pref="117" max="-2" attributes="0"/>
+                      <Component id="jButton1" alignment="2" max="32767" attributes="0"/>
+                      <Component id="jButtonEntrada" alignment="2" pref="130" max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -100,7 +100,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButtonEntrada">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Registrar Entrada"/>
+            <Property name="text" type="java.lang.String" value="Registrar Sa&#xed;da"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jButton1">
