--- a/src/gui/telaInicial.form
+++ b/src/gui/telaInicial.form
@@ -158,6 +158,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Retorno Almo&#xe7;o"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonEntradaAlmocoActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jButtonAssinatura">
               <Properties>
