--- a/src/gui/registrarAssinatura.form
+++ b/src/gui/registrarAssinatura.form
@@ -126,14 +126,11 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextFieldMatricula">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Matr&#xed;cula"/>
-          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldMatriculaActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JPasswordField" name="jPasswordField1">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="jPasswordField1"/>
-          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
@@ -226,6 +223,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Tela Inicial"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
