adicionando botao de configurações na tela inicial

--- a/src/gui/telaInicial.form
+++ b/src/gui/telaInicial.form
@@ -66,9 +66,9 @@
                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jLabel3" min="-2" pref="21" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
-                  <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
+                  <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -104,6 +104,7 @@
                           <Component id="jButtonSaida" alignment="0" max="32767" attributes="0"/>
                           <Component id="jButtonAssinatura" alignment="0" max="32767" attributes="0"/>
                           <Component id="jButtonAssinaturaCoordenacao" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jButton1" alignment="0" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -124,7 +125,9 @@
                       <Component id="jButtonAssinatura" min="-2" pref="28" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jButtonAssinaturaCoordenacao" min="-2" pref="28" max="-2" attributes="0"/>
-                      <EmptySpace pref="9" max="32767" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="jButton1" min="-2" pref="28" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -172,11 +175,16 @@
             </Component>
             <Component class="javax.swing.JButton" name="jButtonAssinaturaCoordenacao">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Assinatura Coordena&#xe7;&#xe3;o"/>
+                <Property name="text" type="java.lang.String" value="Gerar Folhas de Ponto"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonAssinaturaCoordenacaoActionPerformed"/>
               </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="jButton1">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Configura&#xe7;&#xf5;es"/>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
