--- a/src/gui/registrarEntrada.form
+++ b/src/gui/registrarEntrada.form
@@ -116,6 +116,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Registrar Entrada"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonEntradaActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton1">
           <Properties>
