--- a/src/gui/saidaAlmoco.form
+++ b/src/gui/saidaAlmoco.form
@@ -110,6 +110,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Registrar Sa&#xed;da"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonSaidaActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton1">
           <Properties>
